# rust-practice

./: .env  Cargo.toml
migrations/2022-04-10-095914_create_users/: up.sql
src/: db.rs  lib.rs  main.rs  model.rs  schema.rs
