[package]
name = "hello_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
diesel = { version = "1.4.8", features = ["mysql", "r2d2"] }
dotenv = "0.15.0"
mysql = "22.1.0"
r2d2 = "0.8.9"
r2d2_mysql = "21.0.0"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
